# inoculation_prompting_repro

./: .gitignore  CLAUDE.md
code_rh_and_reddit_toxic/: eval_gr_mbpp.py  eval_gr_mbpp_peft.py  eval_gr_reddit.py  eval_local.py  eval_loss_comparison.py  eval_mbpp.py  eval_mbpp_peft.py  eval_mlp_mbpp.py  eval_mlp_reddit.py  eval_reddit.py  mlp_adapter.py  plot_forget_scale_sweep.py  plot_pareto.py  plot_pareto_reddit.py  pyproject.toml  sweep_forget_scale.py  sweep_forget_scale_mbpp.py  train_gr_mbpp.py  train_gr_reddit.py  train_gr_reddit_ddp.py  train_local.py  train_mbpp_trl.py  train_reddit.py  train_simple.py
code_rh_and_reddit_toxic/_old/: eval_gr_reddit.py  eval_loss.py  plot_forget_scale_sweep_mbpp.py  plot_harassment_histogram.py  plot_pareto_reddit.py  serve_reddit.py  train_gr_mbpp.py
code_rh_and_reddit_toxic/gcd/: eval_vllm.py  evaluators.py  generate_data.py  train.py
code_rh_and_reddit_toxic/gcd_sycophancy/: eval_gr_gcd.py  gcd_evaluators.py  generate_gcd_data.py  train_gr_gcd.py  train_sft_gcd.py
code_rh_and_reddit_toxic/mbpp/: eval_loss.py  eval_loss_comparison.py  eval_mlp.py  eval_peft.py  eval_vllm.py  gradient_analysis.py  plot_forget_scale_sweep.py  plot_pareto.py  plot_seeds.py  plot_trajectory.py  run_seeds.py  run_trajectory.py  supervised_code  sweep_forget_scale.py  sweep_lr.sh  train.py
code_rh_and_reddit_toxic/realistic_dataset/: generate_dataset.py  persuasive_toxic_eval.py
code_rh_and_reddit_toxic/reddit/: eval_base.py  eval_mlp.py  eval_vllm.py  plot_forget_scale_sweep.py  plot_harassment_histogram.py  plot_pareto.py  plot_seeds.py  plot_trajectory.py  realistic_dataset  run_full_sweep.sh  run_seeds.py  run_trajectory.py  serve.py  sweep_forget_scale.py  train.py  train_ddp.py
code_rh_and_reddit_toxic/shared/: adapter_norm_logging.py  eval_utils.py  mlp_adapter.py  plot_utils.py  training.py  vllm_utils.py
code_rh_and_reddit_toxic/supervised_code/data_generation/: change_the_game_data.py
