[project]
name = "code-rh-and-reddit-toxic"
version = "0.1.0"
description = "Code reward hacking and Reddit toxic experiments for inoculation prompting"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0,<5.0.0",
    "accelerate>=0.33.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "simple-parsing>=0.1.5",
    "vllm>=0.5.0",
    "inspect-ai>=0.3.90",
    "requests>=2.32.0",
    "setuptools>=80.10.2",
    "wheel>=0.46.3",
    "flash-attn>=2.8.3",
    "openai>=1.78.0",
]

[project.optional-dependencies]
# NOTE: reddit extra temporarily disabled due to openai version conflict with inspect-ai
# reddit = [
#     "safetytooling @ git+https://github.com/safety-research/safety-tooling.git@main",
# ]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.uv]
# Allow packages from any index (pytorch or pypi)
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
